fix that really annoying jump in the feedback and prompt panel

--- a/modules/container-client/src/css/common/base.less
+++ b/modules/container-client/src/css/common/base.less
@@ -73,17 +73,28 @@ table.no-border {
     }
   }
 }
+  
+.panel-heading {
+  a {
+    cursor: pointer;
+    .user-select(none);
+  }
+}
 
 .summary-feedback-panel,
 .summary-feedback-panel-preview {
   border: solid 2px @feedback-bg;
   width: 100%;
   .panel-heading {
-    a {
-      cursor: pointer;
-    }
     background-color: @feedback-bg;
     color: white;
+  }
+
+  .panel-body{
+    padding: 0;
+    .panel-body-inner{
+      padding: 10px;
+    }
   }
 }
 
