--- a/modules/container-client/src/css/single-component-editor.less
+++ b/modules/container-client/src/css/single-component-editor.less
@@ -88,6 +88,10 @@ body {
   background-color: @col;
   .panel-body {
     background-color: white;
+    padding: 0;
+    .prompt{
+      padding: 10px;
+    }
   }
 }
 
